--- a/ReversiApp/appsettings.json
+++ b/ReversiApp/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ProductDatabase": "Server=(localdb)\\mssqllocaldb;Database=Game;Trusted_Connection=True;",
-    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Game;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
